Add build process for packaging app-image